Fix: Drop-down options un-clipped in IE11
Drop down options are clipped if the option is wider than 138px

This change changes the styling to allow the browser to determine the correct length (auto)

Trello link: https://trello.com/c/WAcSDTnN/909-ie11-drop-down-menu-options-cropped

--- a/app/assets/stylesheets/ie11.scss
+++ b/app/assets/stylesheets/ie11.scss
@@ -5,4 +5,8 @@
     background-size:40% !important;    
     background-position: 115% !important;
   }
+
+  .selectize-control.select .selectize-input input {
+    width: auto !important;
+  }
 }
